# Work-mananger-skill

./: CLAUDE.md  SKILL.md  actions.skill
modules/: project-management.md  session-management.md
modules/project/: project-crud.md  quick-review.md  task-crud.md
modules/session/: cancel.md  finish.md  start.md
notion-work-management/: SKILL.md
scripts/: notion_client.py
scripts/project/: fetch-overview.py  project-delete.py  project-write.py  task-delete.py  task-write.py
scripts/session/: session-cancel.py  session-create.py  session-fetch-brief.py  session-finish.py
widget/: DEV.md  dev-session.json  package-lock.json  package.json
widget/src/: App.tsx  colors.ts  session.ts  styles.css  types.ts  useNow.ts  window.ts
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs
widget/src/components/: AddTaskForm.tsx  AddTaskPicker.tsx  BlockRow.tsx  CompactCard.tsx  Controls.tsx  Header.tsx  RangeSlider.tsx  TaskRow.tsx
