[package]
name = "widget"
version = "0.1.0"
description = "Session Widget for Work Management"
authors = ["Santiago"]
edition = "2021"

[lib]
name = "widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
